# autonix-deps

./: .gitmodules  LICENSE  README.md  autonix-deps.cabal  default.nix  shell.nix
src/: Analyze.hs  Archive.hs  Args.hs  Autonix.hs  CMake.hs  Deps.hs  Generate.hs  Manifest.hs  PackageDeps.hs  Regex.hs  Types.hs
src/Autonix/: Analyze.hs  Archive.hs  Args.hs  CMake.hs  Deps.hs  Generate.hs  Manifest.hs  Package.hs  PackageDeps.hs  PkgDeps.hs  Regex.hs  Renamed.hs  Renames.hs  Src.hs
