name:                autonix-deps
version:             0.1.0.0
synopsis:            Library for Nix expression dependency generation
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2014 Thomas Tuegel
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Analyze
    Archive
    CMake
    Deps
    Manifest
    Regex
    Types
  build-depends:
      base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.5
    , errors >=1.4
    , filepath >=1.3
    , mtl >=2.1
    , process >=1.2
    , regex-tdfa >=1.2
    , transformers >=0.3
    , xml >=1.3
  hs-source-dirs:      src
  default-language:    Haskell2010